include add-opens args in runnable jar manifest, update github CI action to match new release action